# sleeper-fantasy-football-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dev-restart.sh  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
data/: league_settings.json
docs/: product-audit-2026-07-13.md  product-audit-2026-07-16.md
docs/research/: q1-usage-stickiness-2026-07-22.md  q2-td-regression-2026-07-22.md  q3-vacated-opportunity-2026-07-22.md  q4-coaching-changes-2026-07-22.md  q5-qb-quality-2026-07-22.md  q6-age-archetypes-2026-07-22.md  q7-rookie-indicators-2026-07-22.md  study-s1-bonus-decomposition-2026-07-22.md  study-s2-situation-changes-2026-07-22.md  study-s3-qb-quality-2026-07-22.md  study-s4-archetype-aging-2026-07-22.md  study-s5-yardline-weighting-2026-07-22.md  study-s6-rookie-draft-capital-2026-07-22.md
evals/rubrics/: tier3_rubric.md
evals/runs/: ledger.jsonl
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
security/: egress-allowlist.txt
tests/: test_admin_refresh.py  test_archetypes.py  test_arena.py  test_backtest.py  test_cfb_box.py  test_cfbd_scoring.py  test_cfbd_scouting.py  test_contention.py  test_context_table.py  test_decision_cards.py  test_decomposition.py  test_draft_pick_ownership.py  test_draft_profile.py  test_draft_prompt.py  test_dynasty_model.py  test_dynastyprocess.py  test_early_claim.py  test_early_claim_watch.py  test_elo.py  test_eval_harness.py  test_eval_stats.py  test_faab_market.py  test_findings_bulk.py  test_forecast.py  test_free_agents.py  test_gameday.py  test_gap_report.py  test_gm_address.py  test_gm_metrics.py  test_handcuff.py  test_loader_advanced.py  test_loader_cache.py  test_market.py  test_market_blend.py  test_master_prompt.py  test_mispricing.py  test_names.py  test_negotiation.py  test_net_retry.py  test_news_feed.py  (+36 more)
(+207 files in other folders)
